--- a/website/index.html
+++ b/website/index.html
@@ -287,11 +287,48 @@
               </div>
             </div>
           </div>
-
         </div>
-
       </div>
     </section><!-- End Team Section -->
+
+    <section id="counts" class="counts section-bg">
+      <div class="container">
+
+          <div class="row justify-content-end">
+
+            <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
+              <div class="count-box">
+                <span data-toggle="counter-up">1557</span>
+                <p>Total recipes</p>
+              </div>
+            </div>
+
+            <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
+              <div class="count-box">
+                <span data-toggle="counter-up">405</span>
+                <p>preparation time (hrs)</p>
+              </div>
+            </div>
+
+            <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
+              <div class="count-box">
+                <span data-toggle="counter-up">1927</span>
+                <p>cooking time (hrs)</p>
+              </div>
+            </div>
+
+            <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
+              <div class="count-box">
+                <span data-toggle="counter-up">13836</span>
+                <p>Preparation steps (hrs)</p>
+              </div>
+            </div>
+
+          </div>
+
+      </div>
+    </section><!-- End Counts Section -->
+
 
   </main><!-- End #main -->
 
