--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <div class="dropdown-content" id="myDropdown">
     <a href="./plotly/index.html">Plotly.js</a>
     <a href="./leaflet/index.html">Leaflet.js</a>
-    <a href="./website/index.html">Leaflet.js</a>
+    <a href="./website/index.html">Project 2 Website</a>
 
   </div>
   </div>
