--- a/website/index.html
+++ b/website/index.html
@@ -45,7 +45,7 @@
               <li class="drop-down"><a href="#">Plots</a>
                 <ul>
               </li>
-              <li><a href="#">Plot 1</a></li>
+              <li><a href="https://heesung80.github.io/recipe/" target="_blank">Heesung's Plot</a></li>
               <li><a href="#">Plot 2</a></li>
               <li><a href="#">Plot 3</a></li>
             </ul>
@@ -219,16 +219,13 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/caitlin1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/heesung_chart.gif" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="icofont-twitter"></i></a>
-                  <a href=""><i class="icofont-facebook"></i></a>
-                  <a href=""><i class="icofont-instagram"></i></a>
-                  <a href=""><i class="icofont-linkedin"></i></a>
+                  <a href="https://heesung80.github.io/recipe/" target="_blank"><i class="icofont-download"></i></a>
                 </div>
               </div>
               <div class="member-info">
-                <h4>Recipe Times<br>vs.<br>Ingredients & Effort</h4>
+                <h4>Heesung's Dynamic Recipe<br>Summary Chart</h4>
                 <span>made with D3.js</span>
               </div>
             </div>
@@ -275,7 +272,7 @@
               <div class="member-img">
                 <img src="assets/img/team/test_image3.jpg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="icofont-twitter"></i></a>
+                  <a href="http://www.apple.com"><i class="icofont-twitter"></i></a>
                   <a href=""><i class="icofont-facebook"></i></a>
                   <a href=""><i class="icofont-instagram"></i></a>
                   <a href=""><i class="icofont-linkedin"></i></a>
@@ -306,14 +303,14 @@
             <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
               <div class="count-box">
                 <span data-toggle="counter-up">405</span>
-                <p>preparation time (hrs)</p>
+                <p>Preparation time (hrs)</p>
               </div>
             </div>
 
             <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
               <div class="count-box">
                 <span data-toggle="counter-up">1927</span>
-                <p>cooking time (hrs)</p>
+                <p>Cooking time (hrs)</p>
               </div>
             </div>
 
