--- a/website/index.html
+++ b/website/index.html
@@ -45,8 +45,8 @@
               <li class="drop-down"><a href="#">Plots</a>
                 <ul>
               </li>
-              <li><a href="https://heesung80.github.io/recipe/" target="_blank">Heesung's Plot</a></li>
-              <li><a href="#">Plot 2</a></li>
+              <li><a href="https://heesung80.github.io/recipe/" target="_blank">Heesung's Plots</a></li>
+              <li><a href="inner-page_caitlin.html">Caitlin's Plots</a></li>
               <li><a href="#">Plot 3</a></li>
             </ul>
           </li>
