--- a/website/index.html
+++ b/website/index.html
@@ -234,17 +234,14 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/test_image1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/caitlin1.gif" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="icofont-twitter"></i></a>
-                  <a href=""><i class="icofont-facebook"></i></a>
-                  <a href=""><i class="icofont-instagram"></i></a>
-                  <a href=""><i class="icofont-linkedin"></i></a>
+                  <a href="inner-page_caitlin.html" target="_blank"><i class="icofont-download"></i></a>
                 </div>
               </div>
               <div class="member-info">
-                <h4>Cook Time<br>vs.<br>Prep Time</h4>
-                <span>made with d3.js</span>
+                <h4>Recipe Times vs. Ingredients<br>& Effort</h4>
+                <span>made with plotly.js</span>
               </div>
             </div>
           </div>
