--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
     <a href="./plotly/index.html">Plotly.js</a>
     <a href="./leaflet/index.html">Leaflet.js</a>
     <a href="./website/index.html">Project 2 Website</a>
+    <a href="./citibike/index.html">Citi Bike Analytics</a>
 
   </div>
   </div>
